# egemi

./: Cargo.toml  README.md  changelog.gmi  welcome.gmi
docs/adr/: 001_architecture_decision_records.gmi  002_egui.gmi
src/: browser.rs  editor.rs  gemtext.rs  gemtext_widget.rs  main.rs  util.rs
src/browser/: html.rs  html_test.rs  network.rs  tab.rs
src/browser/fonts/: mod.rs
src/browser/network/: file.rs  gemini.rs  http.rs
src/browser/parsers/: html.rs
src/browser/parsers/html/: html_test.rs
src/browser/widgets/: markdown.rs  mod.rs
src/browser/widgets/markdown/: tree.rs  tree_test.rs
src/svg/: mod.rs
src/widgets/: textbox.rs
