[package]
name = "egemi"
version = "0.1.1"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
eframe = { version = "0.32.0", features = ["persistence"] }
egui_flex = "0.4.0"
egui_extras = { version = "0.32.0", features = ["svg"] }
germ = "0.4.7"
mime = "0.3.17"
regex = "1.11.1"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread"] }
url = "2.5.4"
